# bindery

./: .dockerignore  .gitignore  Containerfile  Procfile  README.md  epubify.py  pyproject.toml  tailwind.config.js
bindery/: __init__.py  auth.py  css.py  db.py  env.py  epub.py  metadata_lookup.py  models.py  parsing.py  rules.py  storage.py  themes.py  web.py
rules/: publishing.json  webnovel.json
static/: app.css  custom.css  tailwind.css
template_ref/: sample.jsx
templates/: archive.html  base.html  book.html  edit.html  index.html  ingest.html  jobs.html  login.html  preview.html  rules.html  wishlist.html
tests/: test_assets.py  test_auth.py  test_book_detail_ui.py  test_bulk_actions.py  test_cache_headers.py  test_cover_download_headers.py  test_cover_edit.py  test_css_format_ui.py  test_css_validation.py  test_db.py  test_deploy_files.py  test_download_filename.py  test_env_file.py  test_epub.py  test_ingest_dedupe.py  test_ingest_preview_stream.py  test_ingest_redirect.py  test_jobs_view.py  test_library_filters.py  test_library_ui.py  test_memory_trim.py  test_metadata_fetch_result.py  test_metadata_lookup.py  test_metadata_lookup_author_selection.py  test_metadata_sqlite.py  test_parsing.py  test_preview_cache_headers.py  test_preview_resume.py  test_read_status.py  test_reader_progress.py  test_reader_ui.py  test_regenerate_queue.py  test_return_navigation.py  test_rule_editor_ui.py  test_rule_validation.py  test_rules.py  test_rules_ui.py  test_search_runtime.py  test_stage_cleanup.py  test_status_view.py  (+9 more)
themes/: default.json
(+20 files in other folders)
